Bug 302329 - ctrl+tab does not work when in file manager mode
Summary: ctrl+tab does not work when in file manager mode
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: tabbing (other bugs)
Version First Reported In: 4.8.3
Platform: Debian unstable Linux
: NOR major
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-22 04:27 UTC by Ritesh Raj Sarraf
Modified: 2012-10-03 19:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2012-06-22 04:27:51 UTC
If my current tab is the File Manager, trying out CTRL + Tab results in Nothing. Then, if I manually click the Webkit tab, and then try CTRL + Tab, it switches to the previous tab.

The functionality breaks whenever I switch to the File View tab.

Reproducible: Always

Steps to Reproduce:
1. Open KOnq file view
2.Try CTRL + Tab
3.
Actual Results:  
No tab cycle occurs

Expected Results:  
Tab cycle should occur.
Comment 1 Dawit Alemayehu 2012-09-26 14:18:16 UTC
Git commit 4f7ed2bf4d75845baf3b90a06ec8cb6bf3ebfde4 by Dawit Alemayehu.
Committed on 25/09/2012 at 09:40.
Pushed by adawit into branch 'KDE/4.9'.

Fixed CTRL+Tab not working when using Dolphin's filemanagement part in Konqueror.
FIXED-IN: 4.9.2
REVIEW: 106569

M  +2    -0    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/4f7ed2bf4d75845baf3b90a06ec8cb6bf3ebfde4
Comment 2 Dawit Alemayehu 2012-09-26 17:42:22 UTC
Git commit e95e336767ba9c4d761fdb9f356dd6d78ad01c16 by Dawit Alemayehu.
Committed on 25/09/2012 at 09:40.
Pushed by adawit into branch 'master'.

Fixed CTRL+Tab not working when using Dolphin's filemanagement part in Konqueror.
FIXED-IN: 4.9.2
REVIEW: 106569

M  +2    -0    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/e95e336767ba9c4d761fdb9f356dd6d78ad01c16
Comment 3 Dawit Alemayehu 2012-09-28 18:03:19 UTC
Git commit b3789357335cbbb100b4a089ee7723078e5d219f by Dawit Alemayehu.
Committed on 28/09/2012 at 19:56.
Pushed by adawit into branch 'KDE/4.9'.

Redo the fix for CTRL+Tab not working when using Dolphin's filemanagement part
in Konqueror. The original fix, commit 4f7ed2b, prevents drag and drop from
working correctly.
REVIEW: 106569

M  +2    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +0    -2    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/b3789357335cbbb100b4a089ee7723078e5d219f
Comment 4 Hrvoje Senjan 2012-10-03 18:08:11 UTC
Dawit, could this be cherry-picked or merged to master?
Comment 5 Dawit Alemayehu 2012-10-03 19:12:30 UTC
(In reply to comment #4)
> Dawit, could this be cherry-picked or merged to master?

Done.