Fixed CTRL+Tab not working when using Dolphin's filemanagement part in Konqueror.

BUG: 302329
FIXED-IN: 4.9.2
REVIEW: 106569